# meta-athlete-main

./: Dockerfile  README.md
docs/: demo.md
node/: Cargo.toml
pallets/athletes/: Cargo.toml  README.md
pallets/athletes/src/: lib.rs  macros.rs  mock.rs  offchain.rs  tests.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
ts-client/: README.md  package-lock.json  package.json
ts-client/scripts/: athletes.ts  buy-card.ts  fetch-metadata-parsed.ts  mint-cards.ts  onchain-summary.ts  register-athletes.ts  sell-card.ts
ts-client/src/: utils.ts
ts-client/src/api/: athletes.ts  connection.ts  index.ts
ts-client/src/interfaces/: augment-api-consts.ts  augment-api-events.ts  augment-api-query.ts  augment-api-tx.ts  lookup.ts  types-lookup.ts
